# chocolate-doom

./: .gitignore  Makefile.am  configure.ac
rt/: CMakeLists.txt  IRasterizer.h  Makefile.am  PixelData.h  PixelShaderBase.h  PolyClipper.cpp  Polygon2D.cpp  Polygon2D.h  Rasterizer.h  VertexProcessor.cpp  VertexProcessor.h  poly.cpp  poly.h  rt.cpp  rt.h  sr.cpp  sr.h  vec3.cpp  vec3.h  vector_math.h
rt/sr/src/renderer/: Makefile.am  cmake_install.cmake
src/: CMakeLists.txt  Makefile.am  i_video.c  m_fixed.h  r_view.c  r_view.h  rt.c  rt.h  rt_if.c  rt_if.h  w_main.c
src/doom/: Makefile.am  d_main.c  d_player.h  p_saveg.c  p_setup.c  r_bsp.c  r_bsp.h  r_defs.h  r_draw.c  r_draw.h  r_local.h  r_main.c  r_main.h  r_plane.c  r_plane.h  r_segs.c  r_segs.h  r_state.h  r_things.c  r_things.h
