
AM_CXXFLAGS = $(CXXFLAGS) -I$(top_srcdir)/src

noinst_LIBRARIES=librt.a

librt_a_SOURCES =               \
sr.cpp           sr.h           \
EdgeData.h \
EdgeEquation.h \
IRasterizer.h \
LineClipper.cpp \
LineClipper.h \
LineClipper.o \
ParameterEquation.h \
PixelData.h \
PixelShaderBase.h \
PolyClipper.cpp \
PolyClipper.h \
PolyClipper.o \
Rasterizer.h \
Renderer.h \
TriangleEquations.h \
vector_math.h \
VertexCache.h \
VertexConfig.h \
VertexProcessor.cpp \
VertexProcessor.h \
VertexProcessor.o \
VertexShaderBase.h \
Polygon2D.h \
Polygon2D.cpp

