
AM_CXXFLAGS = $(CXXFLAGS) -I$(top_srcdir)/src

noinst_LIBRARIES=libsr.a

libsr_a_SOURCES =               \
EdgeData.h      \
EdgeEquation.h  \
IRasterizer.h   \
librenderer.a   \
LineClipper.cpp \
LineClipper.h   \
ParameterEquation.h \
PixelData.h     \
PixelShaderBase.h   \
PolyClipper.cpp     \
PolyClipper.h   \
Rasterizer.h    \
Renderer.h      \
TriangleEquations.h \
VertexCache.h   \
VertexConfig.h  \
VertexProcessor.cpp \
VertexProcessor.h   \
VertexShaderBase.h